1999-11-09  Jeff Hobbs  <hobbs@scriptics.com>

	* doc/open.n: corrected docs for 'a' open mode.

	* generic/tclIOUtil.c: changed Tcl_Alloc to ckalloc

	* generic/tclInt.h:
	* generic/tclObj.c: rolled back changes from 1999-10-29
	Purify noted new leaks with that code

	* generic/tclParse.c: added code in Tcl_ParseBraces to test for
	possible unbalanced open brace in a comment

	* library/init.tcl: removed the installed binary directory from
	the auto_path variable

	* tools/tcl.wse.in: updated to 8.3a1, fixed install of twind.tcl
	and koi8-r.enc files

	* unix/tcl.m4: added recognition of pthreads library for AIX

1999-10-29  Brent Welch <welch@scriptics.com>
	* generic/tclInt.h: Modified the TclNewObj and TclDecrRefCount
	in two ways.  First, in the case of TCL_THREADS, we do not use
	the special Tcl_Obj allocator because that is a source of 
	lock contention.  Second, general code cleanup to eliminate
	duplicated code. In particular, TclDecrRefCount now uses
	TclFreeObj instead of duplicating that code, so it is now
	identical to Tcl_DecrRefCount.

	* generic/tclObj.c: Changed Tcl_NewObj so it uses the
	TclNewObj macro instead of duplicating the code.  Adjusted
	TclFreeObj so it understands the TCL_THREADS case described
	above.

	* library/http2.1/http.tcl: Fixed a bug in the handling of
	the state(status) variable when the -timeout flag is specified.
	Previously it was possible to leave the status undefined
	instead of empty, which caused errors in http::status

1999-10-28  Jeff Hobbs  <hobbs@scriptics.com>

	* unix/aclocal.m4: made it just include tcl.m4

	* library/tcltest1.0/tcltest.tcl: updated makeFile to return
	full pathname of file created

	* generic/tclStringObj.c: fixed Tcl_AppendStringsToObjVA so it only
	iterates once over the va_list (avoiding a memcpy of it,
	which is not portable).

	* generic/tclEnv.c: fixed possible ABR error in environ array

	* tests/scan.test:
	* generic/tclScan.c: added support for use of inline scan,